# complete-genai

1-LangChain/: requirements.txt
1-LangChain/1-1-OpenAI/: 1-1-1-GettingStarted.ipynb  1-1-2-SimpleApp.ipynb
1-LangChain/1-2-Ollama/: app.py
10-HugginggFace/: app.py  experiments.ipynb  requirements.txt
11-AWSGENAI/: app.py  claude.py  llama3.py  requirements.txt
11-AWSGENAI/faiss_index/: index.faiss  index.pkl
12-BlogGenerationAWSGENAI/: app.py
13-CrewGenAI/: agents.py  crew.py  example.py  tasks.py  tools.py
14-HybridSearch/: experiments.ipynb  requirements.txt
15-GraphDB/: experiments.ipynb  promptstrategies.ipynb  requirements.txt
2-VeectorDB/: requirements.txt  vectorretriever.ipynb
3-Data/: requirements.txt
3-Data/3-2-DataIngeestion/: 3-2-DataIngestion.ipynb
3-Data/3-3-DataTransformer/: 3-3-1-RecursiveTextSplitter.ipynb  3-3-2-CharacterTextSplitter.ipynb  3-3-3-HTMLTextSplitter.ipynb  3-3-4-RecursiveJsonSplitter.ipynb
3-Data/3-4-Embeddings/: 3-4-1-Embeddins.ipynb  3-4-2-OllamaEmbeedding.ipynb  3-4-3-huggingFace.ipynb
3-Data/3-5-VectorStore/: 3-5-1-Faiss.ipynb  3-5-2-Chroma.ipynb
4-LCEL/: SimpleLLMLCEL.ipynb  client.py  requirements.txt  serve.py
5-ChatBots/: 1-chatbots.ipynb  requirements.txt
6-QAChatbot/: conversationqa.ipynb  requirements.txt
7-LangChainUpdatesV1/: 7-1-LangChainIntro.ipynb  7-2-ModelIntegration.ipynb  7-3-Tools.ipynb  7-4-Messaes.ipynb  7-5-StructuredOutput.ipynb  7-6-MiddleWare.ipynb  pyproject.toml  requirements.txt
8-QAChatBot/: requirements.txt
9-SearchEngine/: app.py  requirements.txt  tools_agents.ipynb
(+7 files in other folders)
