[project]
name = "7-langchainupdatesv1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "notebook>=7.5.1",
    "python-dotenv>=1.2.1",
]
